# TinyLLM

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
deploy/docker/: Dockerfile  README.md  docker-compose.yml
deploy/triton/: README.md  model.py
scripts/: constrained_demo.py  exec_eval.py  export_onnx.py  extract_demo.py  finetune_demo.py  generate_data.py  overfit.py  retrieve_demo.py  serve.py  serve_demo.py  train.py  train_tokenizer.py
tests/: test_db.py  test_decode.py  test_eval.py  test_extract.py  test_local.py  test_model.py  test_nl_diversity.py  test_pipeline.py  test_repair.py  test_retrieve.py  test_serve.py  test_tokenizer.py  test_train.py
tinyllm/: __init__.py  cli.py  pipeline.py
tinyllm/db/: __init__.py  connection.py
tinyllm/decode/: __init__.py  constrained.py  repair.py
tinyllm/eval/: __init__.py  execution.py
tinyllm/extract/: __init__.py  catalog.py  extractor.py  run.py
tinyllm/model/: __init__.py  collate.py  config.py  transformer.py
tinyllm/nl/: __init__.py  augment.py  lexicon.py  realize.py  template.py
tinyllm/render/: __init__.py  oracle.py
tinyllm/retrieve/: __init__.py  linker.py
tinyllm/schema_graph/: __init__.py  graph.py  serialize.py  synthetic.py  types.py
tinyllm/serve/: __init__.py  app.py  jobs.py  service.py
tinyllm/sql_sampler/: __init__.py  ast.py  sampler.py
tinyllm/tokenizer/: __init__.py  bpe.py
tinyllm/train/: __init__.py  dataset.py  loop.py
tinyllm/validate/: __init__.py  graph_validator.py  result.py  sqlglot_validator.py
(+2 files in other folders)
