[project]
name = "tinyllm"
version = "0.0.1"
description = "From-scratch NL->Oracle-SQL for Oracle E-Business Suite (data engine)"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=23",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
model = ["torch>=2.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
